samples/_failures_safe/1761410290_9f9fd8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7ce56b4.c: In function ‘main’:
./samples/SAFE/__tmp_e7ce56b4.c:174:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  174 |     char input
      |     ^~~~
./samples/SAFE/__tmp_e7ce56b4.c:174:5: error: expected declaration or statement at end of input
